# Graph-Pooling-Methods

./: .gitignore  0414.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/model/: gcn_diff.yaml  gcn_sag.yaml  gcn_topk.yaml
configs/training/: default.yaml
demo/: streamlit_app.py
notebooks/: quick_example.ipynb
scripts/: setup.py  train.py
src/eval/: __init__.py
src/layers/: __init__.py
src/models/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py  visualization.py
tests/: test_graph_pooling.py
